src/components/select/select.less
.y-select-placeholder,.y-select-single{
  color: @f-color-placeholder;
  line-height: 30px;
  text-indent: 4px;
}
.y-select-single{
  color: @f-color-dark;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.y-select-arrow{
  position: absolute;
  top: 50%;
  right: 8px;
  line-height: 1;
  margin-top: -7px;
  font-size: 14px;
  cursor: pointer;
  color: @f-color-normal;
  transition: all .2s ease-in-out;
  &:hover{
    color: @f-color-dark;
  }
}
.y-select-arrow.fa-close{
  color: @danger-color;
}
.y-select-arrow.y-select-important{
  right: 30px;
  top: 50%;
}
.y-select-hasmore:hover{
  color: @primary-color;
}
.y-input.y-select-ctn{
  padding: 0 6px;
  height: auto;
  min-height: 30px;
}
.y-select-ctn:hover .y-select-showdrop{
  display: none;
}
.y-select-ctn .fa-close,.y-select-showclose{
  opacity: 0;
  transition: all 0.2s ease-in-out;
}
.y-select-ctn:hover .y-select-showclose{
  opacity: 1;
}
.y-select-ctn .y-tag{
  height: 24px;
  line-height: 24px;
  margin: 3px 2px 3px 0;
}
.y-select-filter{
  border: none;
  width: 100%;
  height: auto;
  padding-left: 4px;
  min-height: 30px;
  &::-webkit-input-placeholder { /* WebKit browsers */
    color:@f-color-light;
  }
  &:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    color:@f-color-light;
  }
  &::-moz-placeholder { /* Mozilla Firefox 19+ */
    color:@f-color-light;
  }
  &:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:@f-color-light;
  }
  &:focus{
    outline: 0
  }
}
.selected {
  .y-select-ctn {
    box-shadow: 0 0 0 2px rgba(45, 140, 240, .2)
  }
  .y-select-arrow.fa-caret-down{
    transform: rotate(-180deg);
  }
}
.y-select-hover{
  background: #f3f3f3;
}
.y-option{
  margin: 0;
  line-height: normal;
  padding: 8px 16px;
  clear: both;
  color: #333;
  font-size: 12px!important;
  white-space: nowrap;
  list-style: none;
  cursor: pointer;
  transition: background .2s ease-in-out;
  &:hover{
    background: #f3f3f3;
  }
  &.y-selected-item{
    background: @primary-color;
    color: #FFF;
  }
  &.y-selected-multiItem{
    color: @primary-color;
  }
  span{
    width: 80%;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    vertical-align: middle;
  }
  i{
    position: relative;
    top: 3px;
  }
}
.y-select-nodata{
  font-size: @f-size-base;
  color: #999;
  text-align: center;
}
.y-select-disabled {
  i,.y-select-placeholder {
    display: none;
  }
}

